Don't seed things that require an admin user

--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@
 development: &mysql
   adapter: mysql2
   database: openproject_development
-  host: db
+  host: localhost
   username: root
   password:
   encoding: utf8
@@ -41,6 +41,6 @@ test:
   <<: *mysql
   database: openproject_test
 
-production:
+sandstorm:
   <<: *mysql
-  database: openproject
+  database: openproject_sandstorm
